--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,17 @@
 .footer{
   text-align: center;
 }
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.5); /*dim the background*/
+}
+
+.ant-spin-dot{
+  margin: 50px;
+}
