--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -1,4 +1,5 @@
 .project-image{
-    width: 250px;
-    padding: 0px 5px 0px 0px
+    width: 100%;
+    padding: 0px 5px 0px 0px;
+    border-radius: 3%;
 }
